--- a/main.html
+++ b/main.html
@@ -5,6 +5,13 @@
     <title>Analizador de Números</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <h1>Analizador de Números</h1>
+    <p>Ingrese tres números:</p>
+    <input type="text" id="num1" placeholder="Número 1">
+    <input type="text" id="num2" placeholder="Número 2">
+    <input type="text" id="num3" placeholder="Número 3">
+    <button onclick="analizarNumeros()">Analizar</button>
+    <div id="resultado"></div>
+    <script src="java.js"></script>
 </body>
 </html>
