--- a/main.html
+++ b/main.html
@@ -12,6 +12,6 @@
     <input type="text" id="num3" placeholder="Número 3">
     <button onclick="analizarNumeros()">Analizar</button>
     <div id="resultado"></div>
-    <script src="java.js"></script>
+    <script src="javas.js"></script>
 </body>
 </html>
